[gd_scene load_steps=3 format=3 uid="uid://ioso3gx35o0m"]

[ext_resource type="Script" uid="uid://1toaw10fotc1" path="res://scripts/ui/OptionsManager.gd" id="1_jivf8"]
[ext_resource type="PackedScene" uid="uid://dgdivt86emuj0" path="res://scenes/UI/CustomButton.tscn" id="2_knvhu"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jivf8")

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -100.5
offset_right = 59.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsContainer" type="VBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="OptionsContainer/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2
text = "Master"

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2

[node name="Label2" type="Label" parent="OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 2

[node name="SFXVolumeSlider" type="HSlider" parent="OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2

[node name="Label3" type="Label" parent="OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2
text = "Music"
horizontal_alignment = 2

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2

[node name="GraphicsSection" type="VBoxContainer" parent="OptionsContainer/SettingsContainer"]
layout_mode = 2

[node name="FullscreenCheckbox" type="CheckBox" parent="OptionsContainer/SettingsContainer/GraphicsSection"]
layout_mode = 2
text = "Fullscreen"

[node name="VSyncCheckbox" type="CheckBox" parent="OptionsContainer/SettingsContainer/GraphicsSection"]
layout_mode = 2
text = "Vsync"

[node name="ControlsSection" type="VBoxContainer" parent="OptionsContainer/SettingsContainer"]
layout_mode = 2

[node name="MouseSensitivitySlider" type="HSlider" parent="OptionsContainer/SettingsContainer/ControlsSection"]
layout_mode = 2

[node name="BackButton" parent="OptionsContainer" instance=ExtResource("2_knvhu")]
layout_mode = 2
text = "back"
button_text = "back"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
